--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^1.1.0
+  provider: ^6.0.5
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +63,7 @@ flutter:
   assets:
     - assets/images/sign_in_icon.png
     - assets/images/eye_icon.png
+    - assets/images/sitting.png
     #   - images/a_dot_burr.jpeg
     #   - images/a_dot_ham.jpeg
 
